--- a/index.html
+++ b/index.html
@@ -241,45 +241,45 @@
         routine:['Engage Top/Emerging feed','Check Earn campaign','Stake $Kaito','Post quality daily']},
       { cat:'SocialFi/InfoFi', key:'klout', name:'Klout.gg', url:'https://klout.gg/', desc:'Attention Market',
         referralNote:'Referral: “petranto 🧬”', copyText:'petranto 🧬',
-        routine:['Open/close 1 position','Post quality content','Share referral once','Play Chaser']},
+        routine:['Open/close 1 position (Market)','Post content (Klout)','Share referral (Profile)','Play Chaser']},
       { cat:'SocialFi/InfoFi', key:'cookieFun', name:'Cookie.fun', url:'https://www.cookie.fun/profile',
         desc:'Capital-mindshare connections.',
         routine:['Post about campaign projects','Refer users','Use/Trade AI agents','Stake/Lock $COOKIE','Daily tasks']},
       { cat:'SocialFi/InfoFi', key:'ethos', name:'Ethos', url:'https://app.ethos.network/',
         desc:'Web3 reputation',
-        routine:['One review/day','Buy/Sell votes','Invite','Link wallets & socials']},
+        routine:['“Write a Review”','Buy/Sell votes (Markets)','Invite (Profile)','Link wallets & socials (Settings)']},
       { cat:'SocialFi/InfoFi', key:'bantr', name:'Bantr', url:'https://beta.bantr.fun?ic=1UB6N36',
         desc:'SocialFi and product usage',
         routine:['Refer users','Post quality content','Engage leaderboard projects']},
       { cat:'SocialFi/InfoFi', key:'mindoshare', name:'Mindoshare.ai', url:'https://mindoshare.ai/kol?ref=cmev63nqn01mllr3wtpn2whcm',
         desc:'SocialFi',
-        routine:['Create task content','Refer users','Complete tasks on X']},
+        routine:['Complete “Create Post” tasks','Share on X (Tasks)','Invite (Referrals)']},
       { cat:'SocialFi/InfoFi', key:'wallchain', name:'Wallchain (Quacks)', url:'https://quacks.app/?ref=PetrAnto12',
         desc:'SocialFi',
-        routine:['Post on selected projects','Link reward wallets','Refer users','Claim Quacks']},
+        routine:['Post on selected projects','Link reward wallets','Refer users','Claim “Quacks” (Rewards)']},
       { cat:'SocialFi/InfoFi', key:'fundamental', name:'Fundamental.lol', url:'https://fundamental.lol/r/?node=PetrAnto12-5mu',
         desc:'Onchain social hub',
-        routine:['Daily visit/check-in','Mint passport','Invite quality people','Add HL eco wallets','Give/Get Kudos']},
+        routine:['Daily “Check-in”','Mint passport','Invite quality people','Add HL eco wallets','Give/Get Kudos']},
       { cat:'SocialFi/InfoFi', key:'kudoswap', name:'KudoSwap', url:'https://kudoswap.com/PetrAnto12',
         desc:'SocialFi and tokens',
-        routine:['Give Kudos','Get Kudos','Find community code']},
+        routine:['Give Kudos','Get Kudos','Enter community code (Profile)']},
 
       /* Web3 Quests */
       { cat:'Web3 Quests', key:'galxe', name:'Galxe', url:'https://app.galxe.com/hub/invite?code=GICyJr43Nj1NJrZqi4fhOdcjt4V_avTgEEJxuu-AC0=',
         desc:'Quest & airdrop hub',
-        routine:['Pick 1–2 quick quests','Complete & verify','Claim OAT/points','Scan new campaigns']},
+        routine:['Pick 1–2 quick quests (Explore)','Complete & verify','Claim OAT/points','Scan new campaigns']},
       { cat:'Web3 Quests', key:'consumerfi', name:'ConsumerFi', url:'https://www.consumerfi.ai/app?referral_code=PVZcXvqV',
         desc:'ConsumerFi quests',
-        routine:['Daily check-in & tasks','Refer users','Training tasks','Claim credits']},
+        routine:['Daily “Check-in”','Complete “Training” tasks','Invite (Referrals)','Claim credits (Wallet)']},
       { cat:'Web3 Quests', key:'astranovaBP', name:'Astranova BlackPass', url:'https://blackpass.astranova.world?referral_code=6ed940ede64b',
         desc:'SocialFi quests',
-        routine:['Daily spin','Refer users','Complete tasks','Update Black Pass NFT']},
+        routine:['Daily “Spin”','Finish tasks (Quests)','Invite (Referrals)','Update Black Pass NFT']},
       { cat:'Web3 Quests', key:'edgenAura', name:'Edgen Aura', url:'https://www.edgen.tech/aura/PetrAnto12',
         desc:'AI tools for trading & monitoring',
-        routine:['Perform quest tasks','Refer users','Use tools','Post token/stock notes','Register']},
+        routine:['Complete “Aura” quests','Use tools (Dashboard)','Refer users','Post token/stock notes']},
       { cat:'Web3 Quests', key:'addicted', name:'Addicted.fun Invite code', url:'https://addicted.fun',
         desc:'On-chain P2E',
-        routine:['Invite','Check for new tasks']},
+        routine:['Invite friends','Check new tasks weekly']},
       { cat:'Web3 Quests', key:'rallyWait', name:'Rally.fun Waitlist', url:'https://waitlist.rally.fun/joinme/PetrAnto12',
         desc:'SocialFi marketing tool',
         routine:['Confirm email/profile','Refer users','Watch for activities']},
@@ -287,31 +287,67 @@
       /* Fantasy */
       { cat:'Fantasy', key:'fantasyTop', name:'FantasyTop', url:'https://fantasy.top?ref=petranto12',
         desc:'Fantasy trading of creators',
-        routine:['Clout: daily claim','Core: trade/submit decks','Engage 3 creators','Free: keep streak']},
+        routine:['Clout: daily “Claim/Check-in”','Core: trade & submit decks','Engage 3 creators','Free: keep streak']},
       { cat:'Fantasy', key:'footballFun', name:'Football.fun', url:'https://pro.football.fun/login/?referral_code=UWM2GXU9V8O',
         desc:'Fantasy football',
         routine:['Complete tasks','Trade players','Join team','Invite users']},
 
-      /* DeFi */
+      /* DeFi (precise task names) */
       { cat:'DeFi', key:'hyperlend', name:'Hyperlend', url:'https://app.hyperlend.finance/?ref=PETRANTO',
-        desc:'Lend/borrow & points.',
-        routine:['Deposit collateral','Borrow small amount','Repay & adjust LTV','Claim/track points','Refer users']},
+        desc:'Lending markets & points',
+        routine:[
+          'Markets → USDC (or ETH) → “Supply”',
+          'Markets → same asset → “Borrow” small',
+          'Portfolio → “Repay” borrowed',
+          'Points → “Claim” / check leaderboard',
+          'Referrals → share link'
+        ]},
       { cat:'DeFi', key:'felix', name:'Felix', url:'https://www.usefelix.xyz?ref=8956BB26',
-        desc:'Yield & points.',
+        desc:'Yield vaults & points',
         referralNote:'Referral: 8956BB26', copyText:'8956BB26',
-        routine:['Connect wallet','Deposit to a vault','Claim points','Check new pools']},
+        routine:[
+          'Vaults → choose vault → “Deposit”',
+          'Vaults → “Withdraw” small test',
+          'Points → “Claim”',
+          'Referrals → share code 8956BB26'
+        ]},
       { cat:'DeFi', key:'hypurr', name:'Hypurr', url:'https://app.hypurr.fi/',
-        desc:'Restaking / yield.',
-        routine:['Deposit or restake','Review strategy APR','Claim rewards','Recompound weekly']},
+        desc:'Restaking / yield',
+        routine:[
+          'Restake → “Deposit” LST/ETH',
+          'Rewards → “Claim”',
+          'Restake → “Reinvest/Compound” weekly'
+        ]},
       { cat:'DeFi', key:'kinetiq', name:'Kinetiq', url:'https://kinetiq.xyz/',
-        desc:'DeFi aggregation.',
-        routine:['Connect wallet','Stake/liquidity','Vote/boost if available','Claim rewards']},
+        desc:'Aggregator / staking',
+        routine:[
+          'Dashboard → connect wallet',
+          'Stake/Liquidity → “Deposit” to a strategy',
+          'Rewards → “Claim”',
+          'Governance/Boost (if shown) → vote/boost'
+        ]},
       { cat:'DeFi', key:'hyperbeat', name:'Hyperbeat Earn', url:'https://app.hyperbeat.org/earn',
-        desc:'Staking rewards.',
-        routine:['Stake tokens','Complete earn tasks','Claim rewards','Check multipliers']},
+        desc:'Earn quests + staking',
+        routine:[
+          'Earn → complete listed tasks (follow/RT/Discord)',
+          'Earn → “Claim” points',
+          'Stake (if enabled) → “Stake” / “Unstake” test'
+        ]},
       { cat:'DeFi', key:'prjx', name:'PRJX', url:'https://www.prjx.com/@petranto',
-        desc:'Earn/tasks hub.',
-        routine:['Log in daily','Complete tasks','Invite quality users','Claim points']},
+        desc:'Tasks/points hub',
+        routine:[
+          'Daily “Check-in”',
+          'Tasks → complete X/Discord quests',
+          'Referrals → invite quality users',
+          'Wallet → claim points'
+        ]},
+      { cat:'DeFi', key:'paradexWL', name:'Paradex WL', url:'https://app.paradex.trade/wl/astutemakerz',
+        desc:'Starknet perps — waitlist/referral',
+        routine:[
+          'WL page → “Join waitlist”',
+          'WL page → complete social tasks',
+          'Referrals → share WL link'
+        ]},
     ];
 
     const PAST_DAYS = 7, PAST_WEEKS = 4, PAST_MONTHS = 3, PAST_QUARTERS = 3;
